<resources>
    <string name="app_name">ChoreChart</string>
    <string name="tab_text_1">Tasks</string>
    <string name="tab_text_2">Shopping</string>
    <string name="tab_text_3">People</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Test User</string>
    <string name="user_info">Test info</string>
    <string name="teamAvatarDescription">Team Logo Avatar</string>
    <string name="test_list">Test List</string>
    <string name="test_description">test Description</string>
    <string name="test_name">Test Name</string>
    <string name="test_name_1">Test Name 1</string>
    <string name="test_description_1">Test Description 1</string>
    <string name="action_add">add</string>
    <string name="settings_btn_text">settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_edit">edit</string>
    <string name="action_delete">delete</string>
    <string name="lbl_save">Save</string>
    <string name="label_name">Name</string>
    <string-array name="repeat_choices">
        <item>Never</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="title_fragment_date_time">Deadline</string>
    <string name="title_datetime_default"><![CDATA[<Enter datetime>]]></string>
    <string name="label_duration">Estimated time to completion</string>
    <string name="lbl_repeat">Repeat this task:</string>
    <string name="lbl_user">Assign task to:</string>
    <string name="lbl_complete">Task Complete</string>
    <string name="list_name">List Name</string>
    <string name="store_name">Store Name</string>
    <string name="item_name">Item Name</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="save_changes">Save Changes</string>
    <string name="lbl_comment">Comment</string>
    <string name="lbl_group_name">sudo rm -rf /</string>
    <string name="lbl_add_list_items">Manage shopping list items</string>
    <string name="textview">TextView</string>
    <string name="lbl_items">Items</string>
    <string name="lbl_add_item">Add Item</string>
    <string name="lbl_item_name">Item Name</string>
    <string name="checkbox">CheckBox</string>
    <string name="view_tasks">View Tasks</string>
</resources>
